# B-Lec

./: .gitignore  CMakeLists.txt  README.md
ElectricitySimulator/docs/camera/: index.md
ElectricitySimulator/docs/core/: index.md
ElectricitySimulator/docs/input/: index.md
ElectricitySimulator/docs/persistence/: index.md
ElectricitySimulator/docs/rendering/: index.md
ElectricitySimulator/docs/ui/: index.md
ElectricitySimulator/docs/world/: index.md
ElectricitySimulator/include/camera/: camera.h
ElectricitySimulator/include/core/: application.h
ElectricitySimulator/include/input/: input_manager.h
ElectricitySimulator/include/persistence/: world_serializer.h
ElectricitySimulator/include/rendering/: renderer.h  shader.h
ElectricitySimulator/include/ui/: ui_system.h
ElectricitySimulator/include/world/: block.h  block_interaction.h  block_selector.h  chunk.h  raycast.h  world.h
ElectricitySimulator/src/: application.cpp  main.cpp
ElectricitySimulator/src/camera/: camera.cpp
ElectricitySimulator/src/input/: input_manager.cpp
ElectricitySimulator/src/persistence/: world_serializer.cpp
ElectricitySimulator/src/rendering/: renderer.cpp  shader.cpp
ElectricitySimulator/src/ui/: ui_system.cpp
ElectricitySimulator/src/world/: block.cpp  block_interaction.cpp  block_selector.cpp  chunk.cpp  raycast.cpp  world.cpp
code_testing/: CMakeLists.txt  README.md  test_framework.h
code_testing/debug/: test_debug_overlay.cpp
code_testing/input/: test_input_handler.cpp
code_testing/render/: test_camera.cpp  test_font.cpp  test_mesh.cpp  test_renderer.cpp  test_renderer_3d.cpp
code_testing/ui/: test_ui_manager.cpp
code_testing/window/: test_window_manager.cpp
code_testing/world/: test_block_system.cpp
docs/: ARCHITECTURE.md  BUILDING.md  BUILD_AND_TEST.md  DEVELOPMENT.md  PHASE1_SUMMARY.md  PROJECT_COMPLETION.md
docs/code_documentation/: debug.md  input.md  render.md  ui.md  window.md  world.md
docs/code_review_reports/: 2026-02-26_blec_review.md
include/debug/: debug_overlay.h
include/input/: input_handler.h
include/render/: camera.h  font.h  mesh.h  renderer.h
include/ui/: ui_manager.h
include/window/: window_manager.h
include/world/: block_system.h
src/: main.cpp
src/debug/: debug_overlay.cpp
src/input/: input_handler.cpp
src/render/: camera.cpp  font.cpp  mesh.cpp  renderer.cpp
src/ui/: ui_manager.cpp
src/window/: window_manager.cpp
src/world/: block_system.cpp
test/: test_helpers.h
test/camera/: camera_test.cpp
test/core/: application_test.cpp  main_test.cpp
test/input/: input_manager_test.cpp
test/persistence/: world_serializer_test.cpp
test/rendering/: renderer_test.cpp  shader_test.cpp
test/ui/: ui_system_test.cpp
test/world/: block_interaction_test.cpp  block_selector_test.cpp  block_test.cpp  chunk_test.cpp  raycast_test.cpp  world_test.cpp
